--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy==1.26.4
-pandas==2.2.0
-pillow==10.2.0
-pystray==0.19.5
-python-dateutil==2.8.2
-python-xlib==0.33
-pytz==2024.1
-PyYAML==6.0.1
-six==1.16.0
-tzdata==2024.1
+numpy
+pandas
+pillow
+pystray
+python-dateutil
+python-xlib
+pytz
+PyYAML
+six
+tzdata
