updated requirement versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-numpy
-pandas
-pillow
-pystray
-python-dateutil
-python-xlib
-pytz
-PyYAML
-six
-tzdata
-plotly
+narwhals==1.41.0
+numpy==1.24.2
+pandas==1.5.3
+pillow==10.2.0
+plotly==6.1.2
+pystray==0.19.5
+python-dateutil==2.8.2
+python-xlib==0.33
+pytz==2023.2
+PyYAML==6.0.1
+six==1.16.0
+tzdata==2025.2
